<resources>
    <string name="app_name">Minhas Tarefas</string>

    <string name="title">Título</string>
    <string name="description">Descrição</string>
    <string name="date">Data</string>
    <string name="time">Hora</string>
    <string name="save">Salvar</string>

    <string name="title_required">Título é obrigatório</string>

    <string name="server_error">Não foi possível conectar ao servidor</string>
    <string name="empty_list">Não existem tarefas cadastradas.\nClique no botão abaixo para cadastrar uma nova tarefa.</string>

    <string name="permission">Permissões</string>
    <string name="notification_permission_rationale">O aplicativo irá enviar notificações para você quando houver tarefas pendentes.</string>
    
    <string name="preferences">Configurações</string>
    <string name="daily_notification">Notificações diárias</string>
    <string name="daily_notification_on">Você receberá uma notificação diária.</string>
    <string name="daily_notification_off">Você não receberá a notificação diária.</string>
    <string name="date_format_category">Formato da data</string>
    <string name="date_format_title">Escolha o formato da data</string>
    <string-array name="date_format_entries">
        <item>01/01/2025</item>
        <item>01 de janeiro de 2025</item>
    </string-array>

    <string-array name="date_format_values">
        <item>numeric</item>
        <item>textual</item>
    </string-array>

    <string name="mark_completed">Marcar como concluída</string>

    <string name="create_error">Não foi possível criar a tarefa.</string>
    <string name="update_error">Não foi possível atualizar a tarefa</string>
    <string name="load_error">Erro ao carregar os dados da tarefa.</string>

    <string name="email">E-mail</string>
    <string name="password">Senha</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="create_account">Criar conta</string>
    <string name="empty_email">Preencha o e-mail</string>
    <string name="empty_password">Preencha a senha</string>
    <string name="account_created_fail">Não foi possível criar a conta</string>
    <string name="login_fail">Não foi possível fazer o login</string>
</resources>