<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        app:boxBackgroundColor="?android:colorBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:boxBackgroundColor="?android:colorBackground"
        app:layout_constraintEnd_toEndOf="@id/layoutEmail"
        app:layout_constraintStart_toStartOf="@id/layoutEmail"
        app:layout_constraintTop_toBottomOf="@id/layoutEmail"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="@id/layoutEmail"
        app:layout_constraintStart_toStartOf="@id/layoutEmail"
        app:layout_constraintTop_toBottomOf="@id/layoutPassword" />

    <Button
        android:id="@+id/btCreateAccount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/create_account"
        app:layout_constraintEnd_toEndOf="@id/layoutEmail"
        app:layout_constraintStart_toStartOf="@id/layoutEmail"
        app:layout_constraintTop_toBottomOf="@id/btLogin" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutPhone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:boxBackgroundColor="?android:colorBackground"
        app:layout_constraintStart_toStartOf="@id/layoutEmail"
        app:layout_constraintEnd_toEndOf="@id/layoutEmail"
        app:layout_constraintTop_toBottomOf="@id/btCreateAccount">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Telefone (+55 ...)"
            android:inputType="phone" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btSendCode"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Enviar código"
        app:layout_constraintStart_toStartOf="@id/layoutEmail"
        app:layout_constraintEnd_toEndOf="@id/layoutEmail"
        app:layout_constraintTop_toBottomOf="@id/layoutPhone" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutCode"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:boxBackgroundColor="?android:colorBackground"
        app:layout_constraintStart_toStartOf="@id/layoutEmail"
        app:layout_constraintEnd_toEndOf="@id/layoutEmail"
        app:layout_constraintTop_toBottomOf="@id/btSendCode">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Código recebido"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btVerifyCode"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Verificar código"
        app:layout_constraintStart_toStartOf="@id/layoutEmail"
        app:layout_constraintEnd_toEndOf="@id/layoutEmail"
        app:layout_constraintTop_toBottomOf="@id/layoutCode" />

</androidx.constraintlayout.widget.ConstraintLayout>